# AdventOfCode2021

./: CMakeLists.txt  README.md
Puzzles/: CMakeLists.txt
Puzzles/Day1/: CMakeLists.txt  day1.hpp  main.cpp  test.cpp
Puzzles/Day2/: CMakeLists.txt  day2.hpp  main.cpp  test.cpp
Puzzles/Day3/: CMakeLists.txt  day3.hpp  main.cpp  test.cpp
Puzzles/Day4/: CMakeLists.txt  day4.hpp  main.cpp  test.cpp
Utils/: CMakeLists.txt
Utils/include/AoC-Utils/algorithm/: sliding_window.hpp  splits.hpp
Utils/include/AoC-Utils/container/: Array2d.hpp
Utils/include/AoC-Utils/input/: input.hpp  parse.hpp
